      dpkg 1.17.5.  Thanks to James Hunt for the reminder.
      (Closes: #735266)

  * reporting/config:
    + [NT] Fix typo of HARNESS_STATE_DIR config variable.
  * reporting/html_reports:
    + [NT] Link to the library API docs from the index page.
      (Closes: #639974)
    + [NT] Optimise the graph generation by only calling
      gnuplot twice (rather than once plus once per tag).

 -- Niels Thykier <niels@thykier.net>  Tue, 14 Jan 2014 21:18:15 +0100

lintian (2.5.21) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - bad-intended-distibution
      - debian-rules-should-not-automatically-update-control
      - debian-rules-should-not-use-DEB_BUILD_OPTS
      - debian-rules-should-not-use-or-modify-user-only-variable
      - debian-rules-should-not-use-pwd
      - debian-rules-should-not-use-underscore-variable
      - license-problem-md5sum-non-distributable-file
      - license-problem-md5sum-non-free-file
      - license-problem-non-free-RFC
      - maintainer-script-should-not-use-service
      - privacy-breach-donation
      - privacy-breach-facebook
      - privacy-breach-google-cse
      - privacy-breach-logo
      - privacy-breach-piwik
      - privacy-breach-statistics-website
      - privacy-breach-w3c-valid-html
      - source-contains-prebuilt-flash-object
      - source-contains-prebuilt-flash-project
      - source-contains-prebuilt-java-object
      - source-contains-prebuilt-javascript-object
      - source-contains-prebuilt-python-object
      - source-contains-prebuilt-silverlight-object
    + Removed:
      - debian-rules-automatically-updates-control
      - debian-rules-uses-DEB_BUILD_OPTS
      - debian-rules-uses-or-modifies-user-only-variable
      - debian-rules-uses-pwd

  * checks/changelog-file.{desc,pm}:
    + [BR] Warn when an upload erroneously targeted at distribution that
      is not intended (Closes: #661990).
  * checks/cruft.{desc,pm}:
    + [BR] Detect non free rfc (Closes: #365213).