@@ -57,6 +57,8 @@
       <tr><td>Archive area:</td>     <td>{$area}</td></tr>
       <tr><td>Architecture:</td>     <td>{$architecture}</td></tr>
       <tr><td>Maintainers:</td>      <td>{$delta{maintainers}}</td></tr>
+      <tr><td>Package groups:</td>     <td>{$delta{'groups-known'}}</td></tr>
+      <tr><td>Rescheduled groups:</td> <td>{$delta{'groups-backlog'}}</td></tr>
       <tr><td>Source packages:</td>  <td>{$delta{'source-packages'}}</td></tr>
       <tr><td>Binary packages:</td>  <td>{$delta{'binary-packages'}}</td></tr>
       <tr><td>&mu;deb packages:</td> <td>{$delta{'udeb-packages'}}</td></tr>
