@@ -18,6 +18,8 @@ lintian (2.5.22) UNRELEASED; urgency=medium
       (Closes: #639974)
     + [NT] Optimise the graph generation by only calling
       gnuplot twice (rather than once plus once per tag).
+    + [NT] Show the number of package groups and the size
+      of the harness backlog on the index page.
 
  -- Niels Thykier <niels@thykier.net>  Tue, 14 Jan 2014 21:18:15 +0100
 
